--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,4 +1,4 @@
-@import '../../globalStyle.scss';
+@use '../../styles/variaveis.scss';
 
 header {
     display: flex;
@@ -6,14 +6,14 @@ header {
     height: 90px;
     justify-content: space-between;
     padding: 2rem 1.5rem;
-    border-bottom: 1px solid $color-text-black;
+    border-bottom: 1px solid variaveis.$color-text-black;
     .mainHeader {
         font-weight: bold;
         display: flex;
         align-items: center;
 
         img {
-            padding-right: 8px;
+            margin-right: 8px;
         }
     }
 
@@ -22,12 +22,21 @@ header {
         align-items: center;
 
         .linkHome {
-            padding-right: 20px;
+            margin-right: 20px;
+            font-weight: 500;
+        }
+
+        .linkVoluntario {
+            background-color: variaveis.$color-primary;
+            padding: 20px 30px;
+            border-radius: 11px;
+            color: white;
+            font-weight: 500;
         }
     }
 }
 
 .links, .linkHome, .linkVoluntario {
     text-decoration: none;
-    color: $color-text-black;
+    color: variaveis.$color-text-black;
 }
