--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,4 +1,5 @@
 @use '../../styles/variaveis.scss';
+@use '../../styles/mixins';
 
 header {
     display: flex;
@@ -22,16 +23,15 @@ header {
         align-items: center;
 
         .linkHome {
-            margin-right: 20px;
+            margin-right: 30px;
+            font-size: 20px;
             font-weight: 500;
         }
 
         .linkVoluntario {
+            @include mixins.button;
             background-color: variaveis.$color-primary;
-            padding: 20px 30px;
-            border-radius: 11px;
             color: white;
-            font-weight: 500;
         }
     }
 }
