--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -1,31 +1,49 @@
 @use '../../styles/variaveis.scss';
 @use '../../styles/mixins.scss';
 
-
+// Estilos gerais
 h1 {
-    font-size: 67px;
+    font-size: 4.188rem;
+    font-weight: bold;
+    text-shadow: 0 4px 4px rgba($color: variaveis.$color-text-black, $alpha: 0.25);
+}
+
+h2 {
+  font-size: 3.75rem;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 1.875rem;
+  font-weight: bold;
 }
 
 p {
-    font-size: 25px;
+    font-size: 1.438rem;
 }
 
+// Primeira seção
 .firstMain {
+  padding: 2% 5%;
   display: flex;
   justify-content: space-between;
-  margin: 2% 5%;
+  margin-bottom: 100px;
 
   .mainTitle {
     display: flex;
     flex-direction: column;
-    max-width: 557px;
+    width: 560px;
     justify-content: space-between;
+
+    p {
+      font-size: 1.563rem;
+    }
 
     .icon {
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 244px;
+      width: 50%;
       padding: 10px;
       margin-top: 100px;
       border-radius: 30px;
@@ -37,13 +55,14 @@ p {
       }
 
       p {
-        font-size: 20px;
+        font-size: 1.25rem;
         font-weight: 500;
       }
     }
   }
 }
 
+// Botões
 .buttons {
     display: flex;
 
@@ -59,4 +78,30 @@ p {
       color: variaveis.$color-primary;
       border: 2px solid variaveis.$color-primary;
     }
+}
+
+// Seção Missão
+.missao {
+  background-color: variaveis.$color-primary;
+  padding: 5% 5%;
+  
+  h2, p {
+    color: variaveis.$color-white;
+  }
+
+  p {
+    margin-top: 30px;
+  }
+
+  .articles {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 50px;
+
+    article {
+      @include mixins.article;
+      color: variaveis.$color-white;
+      border-color: variaveis.$color-white;
+    }
+  }
 }
