--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -22,4 +22,10 @@
         margin-top: 30px;
         font-size: 1.25rem;
     }
-  }
+}
+
+@mixin articles {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
