--- a/src/styles/globalStyle.scss
+++ b/src/styles/globalStyle.scss
@@ -11,3 +11,21 @@
     text-decoration: none;
     font-family: "Inter", sans-serif;
 }
+
+// =============================================================================
+// ESTILOS GERAIS
+// =============================================================================
+h1 {
+    font-size: 4.188rem;
+    font-weight: bold;
+    text-shadow: 0 4px 4px rgba($color: variaveis.$color-text-black, $alpha: 0.25);
+}
+  
+  h2 {
+    font-size: 3.75rem;
+    font-weight: bold;
+}
+  
+  p {
+    font-size: 1.438rem;
+}
