--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -14,6 +14,12 @@
     width: 560px;
     justify-content: space-between;
 
+    h1 {
+      font-size: 4.188rem;
+      font-weight: bold;
+      text-shadow: 0 4px 4px rgba($color: variaveis.$color-text-black, $alpha: 0.25);
+    }
+
     p {
       font-size: 1.563rem;
     }
@@ -61,7 +67,7 @@
 // Seção Missão
 .missao {
   background-color: variaveis.$color-primary;
-  padding: 5% 5%;
+  padding: 4% 4%;
 
   h2,
   p {
@@ -79,7 +85,9 @@
       @include mixins.article;
       color: variaveis.$color-white;
       border-color: variaveis.$color-white;
-
+      max-width: 450px;
+      min-width: 450px;
+      
       h3 {
         font-size: 1.875rem;
         font-weight: bold;
@@ -90,7 +98,7 @@
 
 // Seção Impacto
 .impacto {
-  padding: 5% 5%;
+  padding: 4% 4%;
 
   h2 {
     font-size: 3.75rem;
@@ -115,6 +123,8 @@
       @include mixins.article;
       color: variaveis.$color-text-black;
       border-color: variaveis.$color-text-black;
+      max-width: 317px;
+      min-width: 317px;
     }
   }
 }
