--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -12,4 +12,7 @@ $color-off-white: #F8F8F8;
 
 // Breakpoints
 $breakpoint-mobile: 768px;
-$breakpoint-tablet: 1024px;
+$breakpoint-tablet: 1035px;
+$breakpoint-header: 1350px;
+$breakpoint-missao: 1547px;
+$breakpoint-notebook: 1583px;
