--- a/src/styles/globalStyle.scss
+++ b/src/styles/globalStyle.scss
@@ -20,14 +20,15 @@
     font-size: 3.75rem;
     font-weight: bold;
 
-    @media (max-width: variaveis.$breakpoint-tablet) {
+    @media (max-width: variaveis.$breakpoint-missao) {
       text-align: center;
     }
 }
   
   p {
     font-size: 1.438rem;
-    @media (max-width: variaveis.$breakpoint-tablet) {
+
+    @media (max-width: variaveis.$breakpoint-missao) {
       text-align: center;
     }
 }
