--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -5,7 +5,7 @@ footer {
     background-color: variaveis.$color-footer-bg;
     color: variaveis.$color-white; 
 
-    h3, h1 {
+    h3, .titulo {
         font-size: 1rem;
         padding: 16px 0;
 
