--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -22,11 +22,11 @@
   .mainTitle {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: flex-end;
     gap: 2rem;
     max-width: 560px;
     min-height: 585px;
-    margin-right: 50px;
+    //margin-right: 50px;
 
     h1 {
       font-size: 4.188rem;
@@ -49,7 +49,7 @@
       width: 244px;
       height: 55px;
       padding: 10px;
-      margin-top: 10%;
+      //margin-top: 4rem;
       border-radius: 30px;
       background-color: variaveis.$color-light-gray;
       font-weight: bold;
@@ -86,7 +86,7 @@
 
       .linkVoluntario, .linkAjuda {
         display: flex;
-        flex: 1;
+        width: 100%;
         padding: 0 auto;
         text-align: center;
         justify-content: center;  
@@ -104,7 +104,7 @@
 // Seção Missão
 .missao {
   background-color: variaveis.$color-primary;
-  padding: 4% 4%;
+  padding: 8% 5%;
 
   h2,
   p {
@@ -112,7 +112,7 @@
   }
 
   p {
-    margin-top: 30px;
+    margin: 30px 0;
   }
 
   .articles {
@@ -136,7 +136,7 @@
 
 // Seção Impacto
 .impacto {
-  padding: 4% 4%;
+  padding: 8% 5%;
 
   h2 {
     font-size: 3.75rem;
@@ -151,7 +151,7 @@
   }
 
   p {
-    margin-top: 30px;
+    margin: 30px 0;
   }
 
   .articles {
