Ajustando tamanho do article em impacto

--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -162,6 +162,7 @@
       color: variaveis.$color-text-black;
       border-color: variaveis.$color-text-black;
       max-width: 317px;
+      min-width: 215px;
     }
   }
 }
