Ajustes em responsividade

--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -159,10 +159,11 @@
 
     article {
       @include mixins.article;
-      color: variaveis.$color-text-black;
-      border-color: variaveis.$color-text-black;
       max-width: 317px;
-      min-width: 215px;
+      min-width: 317px;
+      max-height: 244px;
+      min-height: 244px;
+      
     }
   }
 }
