--- a/src/pages/seja-voluntario/sejaVoluntario.module.scss
+++ b/src/pages/seja-voluntario/sejaVoluntario.module.scss
@@ -34,7 +34,7 @@
 
 .formularioVoluntario {
     background-color: variaveis.$color-primary;
-    padding: 5% 8%;
+    padding: 8% 5%;
 
     h3 {
         font-size: 1.5rem;
@@ -44,6 +44,7 @@
     .formulario {
         background-color: variaveis.$color-white;
         padding: 40px 30px;
+        border-radius: 16px;
 
         fieldset {
             border: none;
