--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,11 +1,21 @@
 @use './variaveis';
 
-@mixin button {
+@mixin button ($backgroun, $cor-texto, $cor-hover) {
     padding: 20px 30px;
     border-radius: 11px;
+    background-color: $backgroun;
+    color: $cor-texto;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 1.25rem;
     text-align: center;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+
+    &:hover,
+            &:focus {
+              background-color: $cor-hover;
+              outline: none;
+            }
 }
 
 @mixin article {
