--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -28,6 +28,11 @@
         margin-top: 30px;
         font-size: 1.25rem;
     }
+
+    &:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+    }
 }
 
 @mixin articles {
@@ -56,6 +61,10 @@
             font-size: 1.125rem;
             font-weight: bold;
             text-shadow: none;
+
+            &:hover {
+                font-weight: 800;
+            }
         }
     }
 }
